--- a/styles/conf.less
+++ b/styles/conf.less
@@ -1,13 +1,14 @@
-@stateful-icon-added:          plus-circled-filled;
-@stateful-icon-ignored:        warning;
-@stateful-icon-modified:       hummingbird-filled;
+@stateful-icon-modified:       infinity-filled;
+@stateful-icon-added:          plus-circled-outline;
 @stateful-icon-renamed:        infinity-filled;
 @stateful-icon-removed:        trash-filled;
-@stateful-color-ignored:       #baafbd;
-@stateful-color-info:          #f2192d;
-@stateful-color-modified:      #b9adff;
-@stateful-color-warning:       #e79013;
+@stateful-icon-ignored:        no-parking-sign-filled;
+@stateful-color-info:          #356af2;
 @stateful-color-success:       #9dff80;
+@stateful-color-warning:       #e7ac7d;
 @stateful-color-error:         #f41a68;
 @stateful-color-added:         #80ffca;
+@stateful-color-modified:      #80ffca;
 @stateful-color-renamed:       #e7ac7d;
+@stateful-color-removed:       #f41a68;
+@stateful-color-ignored:       #847c86;
