--- a/styles/defaults.less
+++ b/styles/defaults.less
@@ -1,14 +1,25 @@
 
-@asset-icon-base-uri:     ~'atom://stateful/icons/triniti';
+@import "declarations";
+
+@asset-icon-base-uri:     ~'atom://@{package-name}/icons/triniti';
 @asset-icon-type:         'svg';
-@stateful-icon-added:     "plus-circled-filled";
-@stateful-icon-ignored:   "no-parking-sign-filled";
-@stateful-icon-modified:  "hummingbird-filled";
-@stateful-icon-removed:   "trash-filled";
-@stateful-icon-renamed:   "infinity-filled";
-@stateful-color-fallback: #3c52e4;
-@stateful-color-added:    @stateful-color-fallback;
-@stateful-color-renamed:  @stateful-color-fallback;
-@stateful-color-removed:  @stateful-color-fallback;
-@stateful-color-ignored:  @stateful-color-fallback;
-@stateful-color-modified: @stateful-color-fallback;
+@rainbow-state-icon-added:     "plus-circled-filled";
+@rainbow-state-icon-ignored:   "no-parking-sign-filled";
+@rainbow-state-icon-modified:  "hummingbird-filled";
+@rainbow-state-icon-removed:   "trash-filled";
+@rainbow-state-icon-renamed:   "infinity-filled";
+@rainbow-state-color-fallback: #3c52e4;
+@rainbow-state-color-added:    @rainbow-state-color-fallback;
+@rainbow-state-color-renamed:  @rainbow-state-color-fallback;
+@rainbow-state-color-removed:  @rainbow-state-color-fallback;
+@rainbow-state-color-ignored:  @rainbow-state-color-fallback;
+@rainbow-state-color-modified: @rainbow-state-color-fallback;
+
+@rainbow-state-color-info:    #5774be;
+@rainbow-state-color-success: #86eb9f;
+@rainbow-state-color-warning: #d8e77d;
+@rainbow-state-color-error:   #ee407f;
+@rainbow-state-icon-info:     "hummingbird";
+@rainbow-state-icon-success:  "checkmark-circled";
+@rainbow-state-icon-warning:  "warning-filled";
+@rainbow-state-icon-error:    "cat";
