--- a/styles/conf.less
+++ b/styles/conf.less
@@ -1,14 +1,16 @@
-@rainbow-state-color-info:     #f29467;
-@rainbow-state-color-modified: #bfffac;
-@rainbow-state-color-renamed:  #79ffcb;
-@rainbow-state-color-success:  #64ffe0;
-@rainbow-state-color-warning:  #9369e7;
-@rainbow-state-color-error:    #f41a68;
+@rainbow-state-color-error:    #ff4171;
+@rainbow-state-color-info:     #5159fa;
+@rainbow-state-color-modified: #3290ff;
+@rainbow-state-color-primary:  #b4dbff;
+@rainbow-state-color-renamed:  #8cfffd;
+@rainbow-state-color-success:  #e6ffa1;
+@rainbow-state-color-warning:  #fcb78a;
 @rainbow-state-color-added:    #80ffca;
 @rainbow-state-color-removed:  #f41a68;
 @rainbow-state-color-ignored:  #847c86;
-@rainbow-state-icon-modified:  url('atom://rainbow-state/icons/triniti/infinity-filled.svg');
 @rainbow-state-icon-added:     url('atom://rainbow-state/icons/triniti/plus-circled-filled.svg');
+@rainbow-state-icon-modified:  url('atom://rainbow-state/icons/triniti/hummingbird-filled.svg');
 @rainbow-state-icon-renamed:   url('atom://rainbow-state/icons/triniti/infinity-filled.svg');
 @rainbow-state-icon-removed:   url('atom://rainbow-state/icons/triniti/trash-filled.svg');
 @rainbow-state-icon-ignored:   url('atom://rainbow-state/icons/triniti/no-parking-sign-filled.svg');
+@rainbow-state-general-iconSize:url('atom://rainbow-state/icons/triniti/145.svg');
